k8s/helloworldapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    name: helloworld
