k8s/helloworldapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - dns-tls-demo.sa-team.teams.kore.appvia.io
    secretName: helloworld
  rules:
  - host: dns-tls-demo.sa-team.teams.kore.appvia.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloworld
            port:
              name: http
